Update: initial commit

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: 智育材化：AI赋能的教学创新实践
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: “人工智能+教学”典型应用场景案例
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
